--- a/Foodgram/app/src/main/res/values/strings.xml
+++ b/Foodgram/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Foodgram</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="jenis_makanan">
+        <item>Appetize</item>
+        <item>Main Course</item>
+        <item>Dessert</item>
+        <item>Minuman</item>
+    </string-array>
 </resources>
