More profile info, UI Update
list Bookmark, list Likes post, profile image

UI update on post detail, profile.

--- a/Foodgram/app/src/main/res/values/strings.xml
+++ b/Foodgram/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
         <item>Dessert</item>
         <item>Minuman</item>
     </string-array>
+
+    <string-array name="Report">
+        <item>Informasi Palsu</item>
+        <item>Pelanggaran hak kekayaan intelektual</item>
+        <item>Bukan Makanan</item>
+    </string-array>
 </resources>
